--- a/src/main/resources/templates/food/getRecipe.html
+++ b/src/main/resources/templates/food/getRecipe.html
@@ -11,7 +11,7 @@
   <div th:insert="~{fragments/header :: header}"></div>
   
   <h1>요리소개</h1>
-  <table align="center" width="800px" border="1" style="text-align: center; border-collapse: collapse;">
+  <table align="center" style="text-align: center; border-collapse: collapse;">
     <tr>
         <th>일련번호</th>
         <th colspan="2" style="font-size: 20px;">요리명</th>
