--- a/src/main/resources/templates/food/getFoodRecommendations.html
+++ b/src/main/resources/templates/food/getFoodRecommendations.html
@@ -11,7 +11,7 @@
   <div th:insert="~{fragments/header :: header}"></div>
 
   <h1>저장한 음식</h1>
-  <table align="center" border="1" style="text-align: center; border-collapse: collapse;">
+  <table align="center" style="text-align: center; border-collapse: collapse;">
     <thead>
       <tr>
         <th>번호</th>
