--- a/src/main/resources/templates/food/getWeeklyMeals.html
+++ b/src/main/resources/templates/food/getWeeklyMeals.html
@@ -17,7 +17,7 @@
   <div align=center>
     <h3 th:text="'주: ' + ${start_date} + ' ~ ' + ${end_date}"></h3>
   
-    <table border=1>
+    <table>
         <thead>
             <tr>
                 <th>날짜</th>
