--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,8 +51,10 @@
 <body>
   <div th:insert="~{fragments/header :: header}"></div>
 
-  <h3>먹고 싶은 음식을 선택하세요</h3>
-  <button id="startSelection">오늘 뭐먹지?</button>
+  <div align=center>
+    <h3>먹고 싶은 음식을 선택하세요</h3>
+    <button id="startSelection">오늘 뭐먹지?</button>
+  </div>
 
   <!-- 팝업창 -->
   <div id="popup"
