--- a/src/main/resources/templates/user/insertBmiRecordForm.html
+++ b/src/main/resources/templates/user/insertBmiRecordForm.html
@@ -17,7 +17,7 @@
     <input type="number" id="weight" name="weight" step="0.1" required><br>
 
     <br>
-    <input type="submit" value="저장">
+    <button type="submit">저장</button>
   </form>
   
   <div th:insert="~{fragments/footer :: footer}"></div>
