add: 노션 링크 추가

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,6 +4,7 @@
     <p style="margin: 0; font-size: 14px; color: #666;">&copy; 2024 HealthyPath. All Rights Reserved.</p>
     <div style="margin-top: 10px;">
       <a href="https://github.com/minju0809/HealthyPath.git" target="_blank" style="margin: 0 10px; color: #3b5998; text-decoration: none;">Github</a>
+      <a href="https://spiral-beech-c1c.notion.site/HealthyPath-15188022e21c806ea028c831dd9d3af5?pvs=73" target="_blank" style="margin: 0 10px; color: #3b5998; text-decoration: none;">Notion</a>
     </div>
   </footer>
 </div>
