--- a/src/main/resources/templates/user/updateUserForm.html
+++ b/src/main/resources/templates/user/updateUserForm.html
@@ -65,6 +65,8 @@
 </head>
 
 <body>
+  <div th:insert="~{fragments/header :: header}"></div>
+
   <h1>추가 정보 입력</h1>
   <form action="/updateUser" method="post">
     <table>
@@ -167,6 +169,8 @@
       </tr>
     </table>
   </form>
+
+  <div th:insert="~{fragments/footer :: footer}"></div>
 </body>
 
 </html>
