--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -38,13 +38,13 @@ button {
 
 /* 테이블 기본 스타일 */
 table {
-  width: 100%;
+  width: 90%;
   border-collapse: collapse;
   border: 1px solid #ddd;
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  margin: 20px 0;
+  margin: 12px auto;
 }
 
 table:hover {
