--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,8 +3,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title th:text="${title}">My Application</title>
   
-  <link th:href="@{/css/style.css}" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link th:href="@{/css/style.css}" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </header>
@@ -14,7 +14,8 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="/" style="font-size: 24px; color: #333;">HealthyPath</a>
       <a class="nav-link" href="/food/getRecipes" style="font-size: 16px;">레시피소개</a>
-
+      <a href="/chat" class="btn me-2">채팅</a>
+      
       <div class="d-flex">
         <div th:if="${session.user == null}" class="text-end">
           <a href="/signup" class="btn btn-outline-primary me-2">회원가입/로그인</a>
