--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -136,7 +136,7 @@ ul li span {
   display: flex;
   align-items: center;
   flex-grow: 1;
-  white-space: nowrap;
+  white-space: normal;
   overflow: hidden;
   text-overflow: ellipsis;
 }
