--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -6,10 +6,11 @@
     <title>Chat Room</title>
     <style>
       #chatContainer {
-        width: 300px;
-        margin: 0 auto;
+        width: 400px;
+        margin: 12px auto;
         padding: 20px;
         border: 1px solid #ccc;
+        border-radius: 8px;
         background-color: #f9f9f9;
       }
 
@@ -42,6 +43,7 @@
         border-radius: 10px;
         max-width: 200px;
         word-wrap: break-word;
+        overflow-wrap: break-word;
       }
 
       .sender .content {
@@ -80,6 +82,8 @@
     </style>
   </head>
   <body>
+    <div th:insert="~{fragments/header :: header}"></div>
+
     <div id="chatContainer">
       <h1 style="text-align: center; margin: 20px 0">Chat Room</h1>
       <div id="messages"></div>
@@ -92,6 +96,8 @@
         <button onclick="sendMessage()">Send</button>
       </div>
     </div>
+
+    <div th:insert="~{fragments/footer :: footer}"></div>
 
     <script>
       let socket = new WebSocket("ws://localhost:8080/ws");
